--- a/checkpoint1.html
+++ b/checkpoint1.html
@@ -17,7 +17,7 @@
 
             if (countdown < 0) {
                 clearInterval(timer);
-                window.location.href = 'https://loot-link.com/s?qS0K';
+                window.location.href = 'https://loot-link.com/s?u2kG';
             }
         }
 
