--- a/checkpoint2.html
+++ b/checkpoint2.html
@@ -17,7 +17,7 @@
 
             if (countdown < 0) {
                 clearInterval(timer);
-                window.location.href = 'https://linkvertise.com/548819/key-for-35-new-link?o=sharing';
+                window.location.href = 'https://link-center.net/548819/last-checkpoint';
             }
         }
 
