--- a/redirect.html
+++ b/redirect.html
@@ -1,33 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Redirecting...</title>
-</head>
-<body>
-    <p id="redirecting-text">Redirecting...</p>
-    <p>If the page does not automatically redirect, <a href="#" id="redirect-link">click here</a>.</p>
-
-    <script>
-        function getNewRawUrl() {
-            fetch('https://api.github.com/gists/8812c3d095dad7f94800beea017940ff')
-            .then(response => response.json())
-            .then(data => {
-                const newRawUrl = data.files.hahaha.raw_url;
-                window.location.replace(newRawUrl); // Replace the current URL
-                history.replaceState(null, '', window.location.href); // Prevent going back
-            })
-            .catch(error => console.error('Error:', error));
-        }
-
-        // Immediately redirect
-        getNewRawUrl();
-
-        // Redirect on click if automatic redirection fails
-        document.getElementById('redirect-link').addEventListener('click', function(event) {
-            event.preventDefault();
-            getNewRawUrl();
-        });
-    </script>
-</body>
-</html>
+<script language="javascript">document.write(unescape('%3C%21%44%4F%43%54%59%50%45%20%68%74%6D%6C%3E%0A%3C%68%74%6D%6C%20%6C%61%6E%67%3D%22%65%6E%22%3E%0A%3C%68%65%61%64%3E%0A%20%20%20%20%3C%6D%65%74%61%20%63%68%61%72%73%65%74%3D%22%55%54%46%2D%38%22%3E%0A%20%20%20%20%3C%74%69%74%6C%65%3E%52%65%64%69%72%65%63%74%69%6E%67%2E%2E%2E%3C%2F%74%69%74%6C%65%3E%0A%3C%2F%68%65%61%64%3E%0A%3C%62%6F%64%79%3E%0A%20%20%20%20%3C%70%20%69%64%3D%22%72%65%64%69%72%65%63%74%69%6E%67%2D%74%65%78%74%22%3E%52%65%64%69%72%65%63%74%69%6E%67%2E%2E%2E%3C%2F%70%3E%0A%20%20%20%20%3C%70%3E%49%66%20%74%68%65%20%70%61%67%65%20%64%6F%65%73%20%6E%6F%74%20%61%75%74%6F%6D%61%74%69%63%61%6C%6C%79%20%72%65%64%69%72%65%63%74%2C%20%3C%61%20%68%72%65%66%3D%22%23%22%20%69%64%3D%22%72%65%64%69%72%65%63%74%2D%6C%69%6E%6B%22%3E%63%6C%69%63%6B%20%68%65%72%65%3C%2F%61%3E%2E%3C%2F%70%3E%0A%0A%20%20%20%20%3C%73%63%72%69%70%74%3E%0A%20%20%20%20%20%20%20%20%66%75%6E%63%74%69%6F%6E%20%67%65%74%4E%65%77%52%61%77%55%72%6C%28%29%20%7B%0A%20%20%20%20%20%20%20%20%20%20%20%20%66%65%74%63%68%28%27%68%74%74%70%73%3A%2F%2F%61%70%69%2E%67%69%74%68%75%62%2E%63%6F%6D%2F%67%69%73%74%73%2F%38%38%31%32%63%33%64%30%39%35%64%61%64%37%66%39%34%38%30%30%62%65%65%61%30%31%37%39%34%30%66%66%27%29%0A%20%20%20%20%20%20%20%20%20%20%20%20%2E%74%68%65%6E%28%72%65%73%70%6F%6E%73%65%20%3D%3E%20%72%65%73%70%6F%6E%73%65%2E%6A%73%6F%6E%28%29%29%0A%20%20%20%20%20%20%20%20%20%20%20%20%2E%74%68%65%6E%28%64%61%74%61%20%3D%3E%20%7B%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%63%6F%6E%73%74%20%6E%65%77%52%61%77%55%72%6C%20%3D%20%64%61%74%61%2E%66%69%6C%65%73%2E%68%61%68%61%68%61%2E%72%61%77%5F%75%72%6C%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%77%69%6E%64%6F%77%2E%6C%6F%63%61%74%69%6F%6E%2E%72%65%70%6C%61%63%65%28%6E%65%77%52%61%77%55%72%6C%29%3B%20%2F%2F%20%52%65%70%6C%61%63%65%20%74%68%65%20%63%75%72%72%65%6E%74%20%55%52%4C%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%68%69%73%74%6F%72%79%2E%72%65%70%6C%61%63%65%53%74%61%74%65%28%6E%75%6C%6C%2C%20%27%27%2C%20%77%69%6E%64%6F%77%2E%6C%6F%63%61%74%69%6F%6E%2E%68%72%65%66%29%3B%20%2F%2F%20%50%72%65%76%65%6E%74%20%67%6F%69%6E%67%20%62%61%63%6B%0A%20%20%20%20%20%20%20%20%20%20%20%20%7D%29%0A%20%20%20%20%20%20%20%20%20%20%20%20%2E%63%61%74%63%68%28%65%72%72%6F%72%20%3D%3E%20%63%6F%6E%73%6F%6C%65%2E%65%72%72%6F%72%28%27%45%72%72%6F%72%3A%27%2C%20%65%72%72%6F%72%29%29%3B%0A%20%20%20%20%20%20%20%20%7D%0A%0A%20%20%20%20%20%20%20%20%2F%2F%20%49%6D%6D%65%64%69%61%74%65%6C%79%20%72%65%64%69%72%65%63%74%0A%20%20%20%20%20%20%20%20%67%65%74%4E%65%77%52%61%77%55%72%6C%28%29%3B%0A%0A%20%20%20%20%20%20%20%20%2F%2F%20%52%65%64%69%72%65%63%74%20%6F%6E%20%63%6C%69%63%6B%20%69%66%20%61%75%74%6F%6D%61%74%69%63%20%72%65%64%69%72%65%63%74%69%6F%6E%20%66%61%69%6C%73%0A%20%20%20%20%20%20%20%20%64%6F%63%75%6D%65%6E%74%2E%67%65%74%45%6C%65%6D%65%6E%74%42%79%49%64%28%27%72%65%64%69%72%65%63%74%2D%6C%69%6E%6B%27%29%2E%61%64%64%45%76%65%6E%74%4C%69%73%74%65%6E%65%72%28%27%63%6C%69%63%6B%27%2C%20%66%75%6E%63%74%69%6F%6E%28%65%76%65%6E%74%29%20%7B%0A%20%20%20%20%20%20%20%20%20%20%20%20%65%76%65%6E%74%2E%70%72%65%76%65%6E%74%44%65%66%61%75%6C%74%28%29%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%67%65%74%4E%65%77%52%61%77%55%72%6C%28%29%3B%0A%20%20%20%20%20%20%20%20%7D%29%3B%0A%20%20%20%20%3C%2F%73%63%72%69%70%74%3E%0A%3C%2F%62%6F%64%79%3E%0A%3C%2F%68%74%6D%6C%3E'))</script>
