--- a/checkpoint2.html
+++ b/checkpoint2.html
@@ -1,31 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Redirect Page</title>
-    <style>
-        body {
-            text-align: center;
-        }
-    </style>
-    <script>
-        var countdown = 1;
-
-        function updateCountdown() {
-            var countdownElement = document.getElementById('countdown');
-            countdownElement.innerHTML = countdown;
-            countdown--;
-
-            if (countdown < 0) {
-                clearInterval(timer);
-                window.location.href = 'https://link-center.net/548819/last-checkpoint';
-            }
-        }
-
-        var timer = setInterval(updateCountdown, 1000);
-    </script>
-</head>
-<body>
-    <h1>Checkpoint 1 Complete</h1>
-    <p>Redirecting you in <span id="countdown">1</span>...</p>
-</body>
-</html>
+<script language="javascript">document.write(unescape('%3C%21%44%4F%43%54%59%50%45%20%68%74%6D%6C%3E%0A%3C%68%74%6D%6C%3E%0A%3C%68%65%61%64%3E%0A%20%20%20%20%3C%74%69%74%6C%65%3E%52%65%64%69%72%65%63%74%20%50%61%67%65%3C%2F%74%69%74%6C%65%3E%0A%20%20%20%20%3C%73%74%79%6C%65%3E%0A%20%20%20%20%20%20%20%20%62%6F%64%79%20%7B%0A%20%20%20%20%20%20%20%20%20%20%20%20%74%65%78%74%2D%61%6C%69%67%6E%3A%20%63%65%6E%74%65%72%3B%0A%20%20%20%20%20%20%20%20%7D%0A%20%20%20%20%3C%2F%73%74%79%6C%65%3E%0A%20%20%20%20%3C%73%63%72%69%70%74%3E%0A%20%20%20%20%20%20%20%20%76%61%72%20%63%6F%75%6E%74%64%6F%77%6E%20%3D%20%31%3B%0A%0A%20%20%20%20%20%20%20%20%66%75%6E%63%74%69%6F%6E%20%75%70%64%61%74%65%43%6F%75%6E%74%64%6F%77%6E%28%29%20%7B%0A%20%20%20%20%20%20%20%20%20%20%20%20%76%61%72%20%63%6F%75%6E%74%64%6F%77%6E%45%6C%65%6D%65%6E%74%20%3D%20%64%6F%63%75%6D%65%6E%74%2E%67%65%74%45%6C%65%6D%65%6E%74%42%79%49%64%28%27%63%6F%75%6E%74%64%6F%77%6E%27%29%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%63%6F%75%6E%74%64%6F%77%6E%45%6C%65%6D%65%6E%74%2E%69%6E%6E%65%72%48%54%4D%4C%20%3D%20%63%6F%75%6E%74%64%6F%77%6E%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%63%6F%75%6E%74%64%6F%77%6E%2D%2D%3B%0A%0A%20%20%20%20%20%20%20%20%20%20%20%20%69%66%20%28%63%6F%75%6E%74%64%6F%77%6E%20%3C%20%30%29%20%7B%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%63%6C%65%61%72%49%6E%74%65%72%76%61%6C%28%74%69%6D%65%72%29%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%77%69%6E%64%6F%77%2E%6C%6F%63%61%74%69%6F%6E%2E%68%72%65%66%20%3D%20%27%68%74%74%70%73%3A%2F%2F%6C%69%6E%6B%2D%63%65%6E%74%65%72%2E%6E%65%74%2F%35%34%38%38%31%39%2F%6C%61%73%74%2D%63%68%65%63%6B%70%6F%69%6E%74%27%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%7D%0A%20%20%20%20%20%20%20%20%7D%0A%0A%20%20%20%20%20%20%20%20%76%61%72%20%74%69%6D%65%72%20%3D%20%73%65%74%49%6E%74%65%72%76%61%6C%28%75%70%64%61%74%65%43%6F%75%6E%74%64%6F%77%6E%2C%20%31%30%30%30%29%3B%0A%20%20%20%20%3C%2F%73%63%72%69%70%74%3E%0A%3C%2F%68%65%61%64%3E%0A%3C%62%6F%64%79%3E%0A%20%20%20%20%3C%68%31%3E%43%68%65%63%6B%70%6F%69%6E%74%20%31%20%43%6F%6D%70%6C%65%74%65%3C%2F%68%31%3E%0A%20%20%20%20%3C%70%3E%52%65%64%69%72%65%63%74%69%6E%67%20%79%6F%75%20%69%6E%20%3C%73%70%61%6E%20%69%64%3D%22%63%6F%75%6E%74%64%6F%77%6E%22%3E%31%3C%2F%73%70%61%6E%3E%2E%2E%2E%3C%2F%70%3E%0A%3C%2F%62%6F%64%79%3E%0A%3C%2F%68%74%6D%6C%3E'))</script>
