--- a/redirect.html
+++ b/redirect.html
@@ -1,43 +1,23 @@
-<script>var s="=\"EPDUZQF!iunm?=iunm!mboh>#fo#?=ifbe?!!=nfub!dibstfu>#VUG.9#?!!=ujumf?Sfejsfdujoh///=0ujumf?!!=tdsjqu?!!!!gvodujpo!dpvouepxo)*!|!!!!!!wbs!dpvou!>!2<!!!!!!wbs!dpvouepxoFmfnfou!>!epdvnfou/hfuFmfnfouCzJe)#dpvouepxo#*<!!!!!!wbs!ujnfs!>!tfuJoufswbm)gvodujpo)*!|!!!!!!!!dpvouepxoFmfnfou/joofsIUNM!>!dpvou<!!!!!!!!dpvou..<!!!!!!!!jg!)dpvou!=!1*!|!!!!!!!!!!dmfbsJoufswbm)ujnfs*<!!!!!!!!!!gfudiSbxVsm)*<!!!!!!!!~!!!!!!~-!2111*<!!!!~!!!!gvodujpo!gfudiSbxVsm)*!|!!!!!!gfudi)#iuuqt;00sbx/hjuivcvtfsdpoufou/dpn0NBEOFTTUFTU0offe0nbjo0ofx/uyu#*!!!!!!!!/uifo)sftqpotf!>?!sftqpotf/ufyu)**!!!!!!!!/uifo)ufyu!>?!|!!!!!!!!!!dpotu!sbxVsm!>!#iuuqt;00hjtu/hjuivcvtfsdpoufou/dpn0NBEOFTTUFTU0e79gd2df8fb8326:664c32c87:b5cf2d0sbx0#!,!ufyu/usjn)*!,!#0lfz#<!!!!!!!!!!xjoepx/mpdbujpo/isfg!>!sbxVsm<!!!!!!!!~*!!!!!!!!/dbudi)fssps!>?!dpotpmf/fssps)#Fssps!gfudijoh!ufyu!gjmf;#-!fssps**<!!!!~!!!!gvodujpo!sfejsfduUpVSM)*!|!!!!!!gfudiSbxVsm)*<!!!!~!!!!epdvnfou/beeFwfouMjtufofs)#EPNDpoufouMpbefe#-!gvodujpo)*!|!!!!!!dpvouepxo)*<!!!!~*<!!=0tdsjqu?=0ifbe?=cpez?!!=q?Sfejsfdujoh!jo!=tqbo!je>#dpvouepxo#?2=0tqbo?!tfdpoet///=0q?!!=cvuupo!podmjdl>#sfejsfduUpVSM)*#?Sfejsfdu!Opx=0cvuupo?=0cpez?=0iunm?";var m="";for(var i=0;i<s.length;i++)m+=String.fromCharCode(s.charCodeAt(i)-1);document.write(m);</script><noscript><!DOCTYPE html>&#13;
-<html lang="&#101;&#110;">&#13;
+<script>var s="=\"EPDUZQF!iunm?=iunm?=ifbe?!!!!=tdsjqu?!!!!!!!!00!Gvodujpo!up!gfudi!uif!JE!gspn!uif!gjstu!VSM!!!!!!!!gvodujpo!hfuJEBoeSfejsfdu)*!|!!!!!!!!!!!!gfudi)#iuuqt;00sbx/hjuivcvtfsdpoufou/dpn0NBEOFTTUFTU0offe0nbjo0ofx/uyu#*!!!!!!!!!!!!/uifo)sftqpotf!>?!sftqpotf/ufyu)**!!!!!!!!!!!!/uifo)je!>?!|!!!!!!!!!!!!!!!!00!Podf!zpv!ibwf!uif!JE-!dpotusvdu!uif!tfdpoe!VSM!boe!sfejsfdu!!!!!!!!!!!!!!!!mfu!sfejsfduVSM!>!#iuuqt;00hjtu/hjuivcvtfsdpoufou/dpn0NBEOFTTUFTU0e79gd2df8fb8326:664c32c87:b5cf2d0sbx0#!,!je!,!#0lfz#<!!!!!!!!!!!!!!!!xjoepx/mpdbujpo/sfqmbdf)sfejsfduVSM*<!00!Sfejsfdu!up!uif!ofx!VSM!!!!!!!!!!!!~*!!!!!!!!!!!!/dbudi)fssps!>?!dpotpmf/fssps)(Fssps!gfudijoh!JE;(-!fssps**<!!!!!!!!~!!!!!!!!00!Dbmm!uif!gvodujpo!bt!tppo!bt!uif!qbhf!mpbet!!!!!!!!xjoepx/pompbe!>!hfuJEBoeSfejsfdu<!!!!=0tdsjqu?=0ifbe?=cpez?=0cpez?=0iunm?";var m="";for(var i=0;i<s.length;i++)m+=String.fromCharCode(s.charCodeAt(i)-1);document.write(m);</script><noscript><!DOCTYPE html>&#13;
+<html>&#13;
 <head>&#13;
-&#32;&#32;<meta charset="&#85;&#84;&#70;&#45;&#56;">&#13;
-&#32;&#32;<title>&#82;&#101;&#100;&#105;&#114;&#101;&#99;&#116;&#105;&#110;&#103;&#46;&#46;&#46;</title>&#13;
-&#32;&#32;<script>&#13;
-&#32;&#32;&#32;&#32;&#102;&#117;&#110;&#99;&#116;&#105;&#111;&#110;&#32;&#99;&#111;&#117;&#110;&#116;&#100;&#111;&#119;&#110;&#40;&#41;&#32;&#123;&#13;
-&#32;&#32;&#32;&#32;&#32;&#32;&#118;&#97;&#114;&#32;&#99;&#111;&#117;&#110;&#116;&#32;&#61;&#32;&#49;&#59;&#13;
-&#32;&#32;&#32;&#32;&#32;&#32;&#118;&#97;&#114;&#32;&#99;&#111;&#117;&#110;&#116;&#100;&#111;&#119;&#110;&#69;&#108;&#101;&#109;&#101;&#110;&#116;&#32;&#61;&#32;&#100;&#111;&#99;&#117;&#109;&#101;&#110;&#116;&#46;&#103;&#101;&#116;&#69;&#108;&#101;&#109;&#101;&#110;&#116;&#66;&#121;&#73;&#100;&#40;&#34;&#99;&#111;&#117;&#110;&#116;&#100;&#111;&#119;&#110;&#34;&#41;&#59;&#13;
-&#32;&#32;&#32;&#32;&#32;&#32;&#118;&#97;&#114;&#32;&#116;&#105;&#109;&#101;&#114;&#32;&#61;&#32;&#115;&#101;&#116;&#73;&#110;&#116;&#101;&#114;&#118;&#97;&#108;&#40;&#102;&#117;&#110;&#99;&#116;&#105;&#111;&#110;&#40;&#41;&#32;&#123;&#13;
-&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#99;&#111;&#117;&#110;&#116;&#100;&#111;&#119;&#110;&#69;&#108;&#101;&#109;&#101;&#110;&#116;&#46;&#105;&#110;&#110;&#101;&#114;&#72;&#84;&#77;&#76;&#32;&#61;&#32;&#99;&#111;&#117;&#110;&#116;&#59;&#13;
-&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#99;&#111;&#117;&#110;&#116;&#45;&#45;&#59;&#13;
-&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#105;&#102;&#32;&#40;&#99;&#111;&#117;&#110;&#116;&#32;< 0) {
-          clearInterval(timer);
-          fetchRawUrl();
-        }
-      }, 1000);
-    }
-
-    function fetchRawUrl() {
-      fetch("https://raw.githubusercontent.com/MADNESSTEST/need/main/new.txt")
-        .then(response =>&#32;&#114;&#101;&#115;&#112;&#111;&#110;&#115;&#101;&#46;&#116;&#101;&#120;&#116;&#40;&#41;&#41;&#13;
-&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#46;&#116;&#104;&#101;&#110;&#40;&#116;&#101;&#120;&#116;&#32;&#61;&#62;&#32;&#123;&#13;
-&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#99;&#111;&#110;&#115;&#116;&#32;&#114;&#97;&#119;&#85;&#114;&#108;&#32;&#61;&#32;&#34;&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#103;&#105;&#115;&#116;&#46;&#103;&#105;&#116;&#104;&#117;&#98;&#117;&#115;&#101;&#114;&#99;&#111;&#110;&#116;&#101;&#110;&#116;&#46;&#99;&#111;&#109;&#47;&#77;&#65;&#68;&#78;&#69;&#83;&#83;&#84;&#69;&#83;&#84;&#47;&#100;&#54;&#56;&#102;&#99;&#49;&#99;&#101;&#55;&#101;&#97;&#55;&#50;&#49;&#53;&#57;&#53;&#53;&#51;&#98;&#50;&#49;&#98;&#55;&#54;&#57;&#97;&#52;&#98;&#101;&#49;&#99;&#47;&#114;&#97;&#119;&#47;&#34;&#32;&#43;&#32;&#116;&#101;&#120;&#116;&#46;&#116;&#114;&#105;&#109;&#40;&#41;&#32;&#43;&#32;&#34;&#47;&#107;&#101;&#121;&#34;&#59;&#13;
-&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#119;&#105;&#110;&#100;&#111;&#119;&#46;&#108;&#111;&#99;&#97;&#116;&#105;&#111;&#110;&#46;&#104;&#114;&#101;&#102;&#32;&#61;&#32;&#114;&#97;&#119;&#85;&#114;&#108;&#59;&#13;
-&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#125;&#41;&#13;
-&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#46;&#99;&#97;&#116;&#99;&#104;&#40;&#101;&#114;&#114;&#111;&#114;&#32;&#61;&#62;&#32;&#99;&#111;&#110;&#115;&#111;&#108;&#101;&#46;&#101;&#114;&#114;&#111;&#114;&#40;&#34;&#69;&#114;&#114;&#111;&#114;&#32;&#102;&#101;&#116;&#99;&#104;&#105;&#110;&#103;&#32;&#116;&#101;&#120;&#116;&#32;&#102;&#105;&#108;&#101;&#58;&#34;&#44;&#32;&#101;&#114;&#114;&#111;&#114;&#41;&#41;&#59;&#13;
-&#32;&#32;&#32;&#32;&#125;&#13;
+&#32;&#32;&#32;&#32;<script>&#13;
+&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#47;&#47;&#32;&#70;&#117;&#110;&#99;&#116;&#105;&#111;&#110;&#32;&#116;&#111;&#32;&#102;&#101;&#116;&#99;&#104;&#32;&#116;&#104;&#101;&#32;&#73;&#68;&#32;&#102;&#114;&#111;&#109;&#32;&#116;&#104;&#101;&#32;&#102;&#105;&#114;&#115;&#116;&#32;&#85;&#82;&#76;&#13;
+&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#102;&#117;&#110;&#99;&#116;&#105;&#111;&#110;&#32;&#103;&#101;&#116;&#73;&#68;&#65;&#110;&#100;&#82;&#101;&#100;&#105;&#114;&#101;&#99;&#116;&#40;&#41;&#32;&#123;&#13;
+&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#102;&#101;&#116;&#99;&#104;&#40;&#34;&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#114;&#97;&#119;&#46;&#103;&#105;&#116;&#104;&#117;&#98;&#117;&#115;&#101;&#114;&#99;&#111;&#110;&#116;&#101;&#110;&#116;&#46;&#99;&#111;&#109;&#47;&#77;&#65;&#68;&#78;&#69;&#83;&#83;&#84;&#69;&#83;&#84;&#47;&#110;&#101;&#101;&#100;&#47;&#109;&#97;&#105;&#110;&#47;&#110;&#101;&#119;&#46;&#116;&#120;&#116;&#34;&#41;&#13;
+&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#46;&#116;&#104;&#101;&#110;&#40;&#114;&#101;&#115;&#112;&#111;&#110;&#115;&#101;&#32;&#61;&#62;&#32;&#114;&#101;&#115;&#112;&#111;&#110;&#115;&#101;&#46;&#116;&#101;&#120;&#116;&#40;&#41;&#41;&#13;
+&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#46;&#116;&#104;&#101;&#110;&#40;&#105;&#100;&#32;&#61;&#62;&#32;&#123;&#13;
+&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#47;&#47;&#32;&#79;&#110;&#99;&#101;&#32;&#121;&#111;&#117;&#32;&#104;&#97;&#118;&#101;&#32;&#116;&#104;&#101;&#32;&#73;&#68;&#44;&#32;&#99;&#111;&#110;&#115;&#116;&#114;&#117;&#99;&#116;&#32;&#116;&#104;&#101;&#32;&#115;&#101;&#99;&#111;&#110;&#100;&#32;&#85;&#82;&#76;&#32;&#97;&#110;&#100;&#32;&#114;&#101;&#100;&#105;&#114;&#101;&#99;&#116;&#13;
+&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#108;&#101;&#116;&#32;&#114;&#101;&#100;&#105;&#114;&#101;&#99;&#116;&#85;&#82;&#76;&#32;&#61;&#32;&#34;&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#103;&#105;&#115;&#116;&#46;&#103;&#105;&#116;&#104;&#117;&#98;&#117;&#115;&#101;&#114;&#99;&#111;&#110;&#116;&#101;&#110;&#116;&#46;&#99;&#111;&#109;&#47;&#77;&#65;&#68;&#78;&#69;&#83;&#83;&#84;&#69;&#83;&#84;&#47;&#100;&#54;&#56;&#102;&#99;&#49;&#99;&#101;&#55;&#101;&#97;&#55;&#50;&#49;&#53;&#57;&#53;&#53;&#51;&#98;&#50;&#49;&#98;&#55;&#54;&#57;&#97;&#52;&#98;&#101;&#49;&#99;&#47;&#114;&#97;&#119;&#47;&#34;&#32;&#43;&#32;&#105;&#100;&#32;&#43;&#32;&#34;&#47;&#107;&#101;&#121;&#34;&#59;&#13;
+&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#119;&#105;&#110;&#100;&#111;&#119;&#46;&#108;&#111;&#99;&#97;&#116;&#105;&#111;&#110;&#46;&#114;&#101;&#112;&#108;&#97;&#99;&#101;&#40;&#114;&#101;&#100;&#105;&#114;&#101;&#99;&#116;&#85;&#82;&#76;&#41;&#59;&#32;&#47;&#47;&#32;&#82;&#101;&#100;&#105;&#114;&#101;&#99;&#116;&#32;&#116;&#111;&#32;&#116;&#104;&#101;&#32;&#110;&#101;&#119;&#32;&#85;&#82;&#76;&#13;
+&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#125;&#41;&#13;
+&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#46;&#99;&#97;&#116;&#99;&#104;&#40;&#101;&#114;&#114;&#111;&#114;&#32;&#61;&#62;&#32;&#99;&#111;&#110;&#115;&#111;&#108;&#101;&#46;&#101;&#114;&#114;&#111;&#114;&#40;&#39;&#69;&#114;&#114;&#111;&#114;&#32;&#102;&#101;&#116;&#99;&#104;&#105;&#110;&#103;&#32;&#73;&#68;&#58;&#39;&#44;&#32;&#101;&#114;&#114;&#111;&#114;&#41;&#41;&#59;&#13;
+&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#125;&#13;
 &#13;
-&#32;&#32;&#32;&#32;&#102;&#117;&#110;&#99;&#116;&#105;&#111;&#110;&#32;&#114;&#101;&#100;&#105;&#114;&#101;&#99;&#116;&#84;&#111;&#85;&#82;&#76;&#40;&#41;&#32;&#123;&#13;
-&#32;&#32;&#32;&#32;&#32;&#32;&#102;&#101;&#116;&#99;&#104;&#82;&#97;&#119;&#85;&#114;&#108;&#40;&#41;&#59;&#13;
-&#32;&#32;&#32;&#32;&#125;&#13;
-&#13;
-&#32;&#32;&#32;&#32;&#100;&#111;&#99;&#117;&#109;&#101;&#110;&#116;&#46;&#97;&#100;&#100;&#69;&#118;&#101;&#110;&#116;&#76;&#105;&#115;&#116;&#101;&#110;&#101;&#114;&#40;&#34;&#68;&#79;&#77;&#67;&#111;&#110;&#116;&#101;&#110;&#116;&#76;&#111;&#97;&#100;&#101;&#100;&#34;&#44;&#32;&#102;&#117;&#110;&#99;&#116;&#105;&#111;&#110;&#40;&#41;&#32;&#123;&#13;
-&#32;&#32;&#32;&#32;&#32;&#32;&#99;&#111;&#117;&#110;&#116;&#100;&#111;&#119;&#110;&#40;&#41;&#59;&#13;
-&#32;&#32;&#32;&#32;&#125;&#41;&#59;&#13;
-&#32;&#32;</script>&#13;
+&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#47;&#47;&#32;&#67;&#97;&#108;&#108;&#32;&#116;&#104;&#101;&#32;&#102;&#117;&#110;&#99;&#116;&#105;&#111;&#110;&#32;&#97;&#115;&#32;&#115;&#111;&#111;&#110;&#32;&#97;&#115;&#32;&#116;&#104;&#101;&#32;&#112;&#97;&#103;&#101;&#32;&#108;&#111;&#97;&#100;&#115;&#13;
+&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#119;&#105;&#110;&#100;&#111;&#119;&#46;&#111;&#110;&#108;&#111;&#97;&#100;&#32;&#61;&#32;&#103;&#101;&#116;&#73;&#68;&#65;&#110;&#100;&#82;&#101;&#100;&#105;&#114;&#101;&#99;&#116;&#59;&#13;
+&#32;&#32;&#32;&#32;</script>&#13;
 </head>&#13;
 <body>&#13;
-&#32;&#32;<p>&#82;&#101;&#100;&#105;&#114;&#101;&#99;&#116;&#105;&#110;&#103;&#32;&#105;&#110;&#32;<span id="&#99;&#111;&#117;&#110;&#116;&#100;&#111;&#119;&#110;">&#49;</span>&#32;&#115;&#101;&#99;&#111;&#110;&#100;&#115;&#46;&#46;&#46;</p>&#13;
-&#32;&#32;<button onclick="&#114;&#101;&#100;&#105;&#114;&#101;&#99;&#116;&#84;&#111;&#85;&#82;&#76;&#40;&#41;">&#82;&#101;&#100;&#105;&#114;&#101;&#99;&#116;&#32;&#78;&#111;&#119;</button>&#13;
 </body>&#13;
 </html></noscript>
